--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: game_app
+name: game_app2
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,36 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-  google_fonts:  
-
-  shared_preferences:  
-
-  provider:  
-  
-  http: 
-  shimmer: 
-  font_awesome_flutter: 
-  auto_size_text: 
-
-
+  google_fonts:
+  provider:
+  shared_preferences:
+  http:
+  shimmer:
+  font_awesome_flutter:
+  auto_size_text:
+  url_launcher:
+  full_screen_image:
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons:  "^0.13.1"
-
-# flutter_icons:
-#   android:  true
-#   ios: true
-#   image_path: "assets/ic_launcher_foreground.png"
-#   image_path_ios: "assets/play_store_512.png"
-#   remove_alpha_ios: true
-#   adaptive_icon_background: "assets/ic_launcher_background.png"
-#   adaptive_icon_foreground: "assets/ic_launcher_foreground.png"
-#   adaptive_icon_padding: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -86,11 +71,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/fonts/
-    - assets/shapes/
-    - assets/icons/
-
-  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
