--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_local_notifications: 
   firebase_messaging: 
   permission_handler: 
+  cloud_firestore:
+  another_flushbar:
 
 
 dev_dependencies:
